misc old-style rewrite